--- a/index.html
+++ b/index.html
@@ -2,117 +2,142 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>For My One & Only ❤️</title>
+    <title>Secure Access Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
         body {
             margin: 0;
             padding: 0;
-            font-family: 'Segoe UI', sans-serif;
+            font-family: Consolas, monospace;
             height: 100vh;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: radial-gradient(circle at top, #0f2027, #000);
+            color: #00ffcc;
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #fff;
-            text-align: center;
         }
 
-        .box {
-            background: rgba(255, 255, 255, 0.15);
-            padding: 40px;
-            border-radius: 20px;
-            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.2);
-            max-width: 450px;
+        .terminal {
+            background: rgba(0, 0, 0, 0.85);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 30px rgba(0, 255, 204, 0.3);
             width: 90%;
+            max-width: 500px;
+            text-align: left;
         }
 
-        h1 {
-            font-size: 2.2rem;
-            margin-bottom: 10px;
+        .terminal h1 {
+            font-size: 1.3rem;
+            margin-bottom: 15px;
         }
 
-        p {
-            font-size: 1.1rem;
+        .terminal p {
+            font-size: 0.95rem;
+            line-height: 1.4;
+            margin: 5px 0;
+        }
+
+        .prompt {
+            margin-top: 15px;
         }
 
         input {
-            width: 80%;
-            padding: 12px;
-            margin-top: 15px;
-            border-radius: 10px;
+            width: 100%;
+            background: black;
             border: none;
-            outline: none;
+            border-bottom: 1px solid #00ffcc;
+            color: #00ffcc;
+            font-family: Consolas, monospace;
             font-size: 1rem;
-            text-align: center;
+            padding: 8px;
+            outline: none;
         }
 
         button {
             margin-top: 15px;
-            padding: 12px 30px;
-            border: none;
-            border-radius: 20px;
-            background: #ff4d6d;
-            color: white;
-            font-size: 1rem;
+            background: transparent;
+            border: 1px solid #00ffcc;
+            color: #00ffcc;
+            padding: 8px 20px;
             cursor: pointer;
+            font-family: Consolas, monospace;
         }
 
         button:hover {
-            background: #ff1e56;
+            background: #00ffcc;
+            color: black;
         }
 
         .error {
             margin-top: 10px;
-            color: #ffd6e0;
+            color: #ff4d4d;
             display: none;
         }
 
-        .hidden {
+        /* LOVE PAGE */
+        .love {
             display: none;
+            text-align: center;
+            font-family: 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            color: white;
+            padding: 40px;
+            border-radius: 20px;
+        }
+
+        .love h1 {
+            font-size: 2.5rem;
+        }
+
+        .love p {
+            font-size: 1.1rem;
+            line-height: 1.6;
         }
 
         .hearts {
             font-size: 2rem;
-            margin: 15px 0;
+            margin: 20px 0;
         }
     </style>
 </head>
 
 <body>
 
-    <!-- PASSWORD SCREEN -->
-    <div class="box" id="lockScreen">
-        <h1>🔐 Private Page</h1>
-        <p>Only my favorite person can enter 💕</p>
+    <!-- HACKER LOGIN -->
+    <div class="terminal" id="terminal">
+        <h1>SECURE SYSTEM ACCESS</h1>
+        <p>Initializing encrypted session...</p>
+        <p>Firewall: ACTIVE</p>
+        <p>Authorization required.</p>
 
-        <input type="password" id="password" placeholder="Enter the secret 💌">
-        <br>
-        <button onclick="checkPassword()">Unlock ❤️</button>
-
-        <div class="error" id="errorMsg">Wrong password 😝 Try again!</div>
+        <div class="prompt">
+            <p>> Enter access key:</p>
+            <input type="password" id="password" autofocus>
+            <button onclick="unlock()">Authenticate</button>
+            <div class="error" id="error">ACCESS DENIED</div>
+        </div>
     </div>
 
-    <!-- LOVE MESSAGE -->
-    <div class="box hidden" id="lovePage">
+    <!-- LOVE PAGE -->
+    <div class="love" id="love">
         <h1>Happy One Year ❤️</h1>
-        <p>To My Favorite Human</p>
 
         <div class="hearts">💖 💕 💗 💞 💘</div>
 
         <p>
-            One year ago, I found you — and somehow my world became softer,
-            brighter, and full of love.
+            Surprise 😌  
+            You just hacked into my heart.
         </p>
 
         <p>
-            Thank you for choosing me, loving me, and standing by me.
-            You are my comfort, my smile, my home.
+            One year with you has been my favorite journey.
+            Thank you for being my constant, my comfort, my love.
         </p>
 
         <p>
-            I can’t wait to make a million more memories with you 💫
+            Here’s to us — now and always 💫
         </p>
 
         <p style="margin-top:20px; font-style:italic;">
@@ -122,15 +147,15 @@
     </div>
 
     <script>
-        function checkPassword() {
-            const correctPassword = "khushvid"; // 🔴 CHANGE PASSWORD HERE
+        function unlock() {
+            const key = "khushvid"; // 🔐 CHANGE PASSWORD HERE
             const input = document.getElementById("password").value;
 
-            if (input === correctPassword) {
-                document.getElementById("lockScreen").classList.add("hidden");
-                document.getElementById("lovePage").classList.remove("hidden");
+            if (input === key) {
+                document.getElementById("terminal").style.display = "none";
+                document.getElementById("love").style.display = "block";
             } else {
-                document.getElementById("errorMsg").style.display = "block";
+                document.getElementById("error").style.display = "block";
             }
         }
     </script>
