--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Secure Access Portal</title>
+<title>Secure Access</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    overflow-x: hidden;
 }
 
-/* ============ HACKER PAGE ============ */
+/* ===== HACKER PAGE ===== */
 .hacker {
     font-family: Consolas, monospace;
     background: radial-gradient(circle at top, #0f2027, #000);
@@ -29,7 +29,6 @@ body {
     border-radius: 10px;
     width: 90%;
     max-width: 520px;
-    box-shadow: 0 0 30px rgba(0,255,204,0.3);
 }
 
 input {
@@ -40,7 +39,6 @@ input {
     color: #00ffcc;
     padding: 8px;
     outline: none;
-    font-family: Consolas, monospace;
 }
 
 button {
@@ -52,49 +50,87 @@ button {
     cursor: pointer;
 }
 
-button:hover {
-    background: #00ffcc;
-    color: black;
-}
-
 .error {
     color: #ff4d4d;
     display: none;
-    margin-top: 10px;
 }
 
-/* ============ LOVE PAGE ============ */
+/* ===== LOVE PAGE ===== */
 .love {
     display: none;
     min-height: 100vh;
-    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-    color: #fff;
+    background: linear-gradient(135deg, #ffdde1, #ee9ca7);
     font-family: 'Segoe UI', sans-serif;
-    text-align: center;
+    color: #fff;
+    position: relative;
     padding: 40px 20px;
+    overflow: hidden;
 }
 
-.card {
-    max-width: 750px;
+.content {
+    max-width: 900px;
     margin: auto;
+    text-align: center;
     background: rgba(255,255,255,0.15);
     padding: 40px;
-    border-radius: 25px;
-    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
+    border-radius: 30px;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.25);
+    position: relative;
+    z-index: 2;
 }
 
-.hearts {
-    font-size: 2.3rem;
-    margin: 20px 0;
+h1 {
+    font-size: 3rem;
+}
+
+.names {
+    font-size: 1.6rem;
+    margin-bottom: 20px;
+}
+
+.big-hearts {
+    font-size: 2.8rem;
     cursor: pointer;
-    animation: float 2s infinite alternate;
+    margin: 20px 0;
 }
 
-@keyframes float {
-    from { transform: translateY(0); }
-    to { transform: translateY(-10px); }
+p {
+    font-size: 1.15rem;
+    line-height: 1.8;
+    margin: 15px 0;
 }
 
+.stats {
+    margin-top: 30px;
+    background: rgba(255,255,255,0.2);
+    padding: 25px;
+    border-radius: 20px;
+}
+
+.footer {
+    margin-top: 35px;
+    font-style: italic;
+    font-size: 1.2rem;
+}
+
+/* ===== HEART RAIN ===== */
+.heart {
+    position: fixed;
+    top: -10vh;
+    font-size: 1.8rem;
+    animation: fall linear forwards;
+    z-index: 1;
+    pointer-events: none;
+}
+
+@keyframes fall {
+    to {
+        transform: translateY(110vh);
+        opacity: 0;
+    }
+}
+
+/* ===== POPUP ===== */
 .popup {
     position: fixed;
     top: 50%;
@@ -102,11 +138,10 @@ button:hover {
     transform: translate(-50%, -50%);
     background: white;
     color: #ff4d6d;
-    padding: 25px;
-    border-radius: 20px;
-    max-width: 300px;
-    box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+    padding: 30px;
+    border-radius: 25px;
     display: none;
+    max-width: 320px;
     z-index: 999;
 }
 
@@ -115,23 +150,18 @@ button:hover {
     border: none;
     background: #ff4d6d;
     color: white;
-    padding: 8px 20px;
-    border-radius: 15px;
-    cursor: pointer;
+    padding: 10px 25px;
+    border-radius: 20px;
 }
 </style>
 </head>
 
 <body>
 
-<!-- ============ HACKER LOGIN ============ -->
+<!-- ===== HACKER LOGIN ===== -->
 <div class="hacker" id="hacker">
     <div class="terminal">
         <h3>SECURE SYSTEM ACCESS</h3>
-        <p>Initializing encrypted session...</p>
-        <p>Firewall: ACTIVE</p>
-        <p>Authorization required.</p>
-
         <p>> Enter access key:</p>
         <input type="password" id="password">
         <button onclick="unlock()">Authenticate</button>
@@ -139,77 +169,90 @@ button:hover {
     </div>
 </div>
 
-<!-- ============ LOVE PAGE ============ -->
+<!-- ===== LOVE PAGE ===== -->
 <div class="love" id="love">
-    <div class="card">
+    <div class="content">
         <h1>Happy One Year ❤️</h1>
-        <h2>Vid 💕 Khushbu</h2>
+        <div class="names">Vid 💕 Khushbu</div>
 
-        <div class="hearts" onclick="showLove()">
-            💖 💕 💗 💞 💘
+        <div class="big-hearts" onclick="showLove()">💖 💕 💗 💞 💘</div>
+        <small>(click me 😏)</small>
+
+        <p>
+            Vid, you turned my normal days into something magical.
+            One year with you feels like home 🥹💗
+        </p>
+
+        <p>
+            Thank you for being my constant, my comfort,
+            my favorite person in every room 💫
+        </p>
+
+        <div class="stats">
+            <p>💑 Vid × Khushbu</p>
+            <p>❤️ Love Level: Unlimited</p>
+            <p>😘 Kisses Pending: Infinite</p>
+            <p>🔐 Status: Permanently Yours</p>
         </div>
-        <small>(click the hearts 👀)</small>
 
-        <p>
-            Vid, congratulations —  
-            you successfully hacked into my heart and never logged out 😌❤️
-        </p>
-
-        <p>
-            One year with you = laughter, chaos, comfort, love,
-            and me annoying you forever 💫
-        </p>
-
-        <p>
-            I choose you. Every day. No retries. No rollback.
-        </p>
-
-        <p style="margin-top:25px;font-style:italic;">
+        <div class="footer">
             Forever yours 💕<br>— Khushbu
-        </p>
+        </div>
     </div>
 </div>
 
 <!-- POPUP -->
 <div class="popup" id="popup">
     <div id="popupText"></div>
-    <button onclick="closePopup()">Okay 🥰</button>
+    <button onclick="closePopup()">Awww 🥹</button>
 </div>
 
-<!-- BACKGROUND MUSIC -->
+<!-- MUSIC -->
 <audio id="music" loop>
-    <!-- 🔴 PUT YOUR SONG LINK HERE -->
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" type="audio/mpeg">
 </audio>
 
 <script>
 const notes = [
-    "Vid, you are my favorite notification ❤️",
-    "If loving you was a bug, I’d never fix it 😌",
-    "You + Me = My safest place 💕",
+    "Vid, you are my safest place ❤️",
+    "I still smile because of you 🥹",
+    "You are my home 💕",
     "One year down, forever to go 💫",
-    "I still get butterflies. Yes, you did this 🦋",
-    "You’re stuck with me now. No uninstall 😈"
+    "You make my heart stupid 😌",
+    "I love you more than noodles 😭"
 ];
 
 function unlock() {
-    const key = "iloveyou"; // 🔐 CHANGE PASSWORD
+    const key = "iloveyou"; // 🔐 CHANGE PASSWORD HERE
     const input = document.getElementById("password").value;
 
     if (input === key) {
         document.getElementById("hacker").style.display = "none";
         document.getElementById("love").style.display = "block";
         document.getElementById("music").play();
+        startHeartRain();
     } else {
         document.getElementById("error").style.display = "block";
     }
 }
 
+function startHeartRain() {
+    setInterval(() => {
+        const heart = document.createElement("div");
+        heart.classList.add("heart");
+        heart.innerText = "❤️";
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.animationDuration = (3 + Math.random() * 4) + "s";
+        document.body.appendChild(heart);
+
+        setTimeout(() => heart.remove(), 7000);
+    }, 300);
+}
+
 function showLove() {
-    const popup = document.getElementById("popup");
-    const text = document.getElementById("popupText");
-    text.innerText = notes[Math.floor(Math.random() * notes.length)];
-    popup.style.display = "block";
+    document.getElementById("popupText").innerText =
+        notes[Math.floor(Math.random() * notes.length)];
+    document.getElementById("popup").style.display = "block";
 }
 
 function closePopup() {
