--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@ button {
     min-height: 100vh;
     background: linear-gradient(135deg, #ffdde1, #ee9ca7);
     font-family: 'Segoe UI', sans-serif;
-    color: #fff;
     position: relative;
     padding: 40px 20px;
     overflow: hidden;
+    color: #5a0f2e;
 }
 
 .content {
-    max-width: 900px;
+    max-width: 950px;
     margin: auto;
     text-align: center;
-    background: rgba(255,255,255,0.15);
-    padding: 40px;
+    background: rgba(255,255,255,0.75);
+    padding: 45px;
     border-radius: 30px;
     box-shadow: 0 20px 50px rgba(0,0,0,0.25);
     position: relative;
@@ -84,8 +84,9 @@ h1 {
 }
 
 .names {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     margin-bottom: 20px;
+    font-weight: bold;
 }
 
 .big-hearts {
@@ -96,15 +97,8 @@ h1 {
 
 p {
     font-size: 1.15rem;
-    line-height: 1.8;
-    margin: 15px 0;
-}
-
-.stats {
-    margin-top: 30px;
-    background: rgba(255,255,255,0.2);
-    padding: 25px;
-    border-radius: 20px;
+    line-height: 1.95;
+    margin: 18px 0;
 }
 
 .footer {
@@ -137,7 +131,7 @@ p {
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
-    color: #ff4d6d;
+    color: #5a0f2e;
     padding: 30px;
     border-radius: 25px;
     display: none;
@@ -148,7 +142,7 @@ p {
 .popup button {
     margin-top: 15px;
     border: none;
-    background: #ff4d6d;
+    background: #5a0f2e;
     color: white;
     padding: 10px 25px;
     border-radius: 20px;
@@ -173,30 +167,38 @@ p {
 <div class="love" id="love">
     <div class="content">
         <h1>Happy One Year ❤️</h1>
-        <div class="names">Vid 💕 Khushbu</div>
+        <div class="names">KhushVid 💕</div>
 
         <div class="big-hearts" onclick="showLove()">💖 💕 💗 💞 💘</div>
-        <small>(click me 😏)</small>
+        <small><strong>Click above the hearts khikhi 👆</strong></small>
 
         <p>
-            Vid, you turned my normal days into something magical.
-            One year with you feels like home 🥹💗
+            It still makes me smile that out of all places,
+            we found each other in a Valorant match.
+            Two random players, one lobby, one game —
+            and somehow that turned into *us*.
+            From clutches, calls, and chaos,
+            to late-night talks, fights, sorrys, thank-yous,
+            and choosing each other even when things weren’t easy.
+            We’ve grown together, learnt patience,
+            learnt love, and learnt how to stay.
+            And just so you know —  
+            <strong>I love you more than noodles</strong>,
+            which honestly says everything.
         </p>
 
         <p>
-            Thank you for being my constant, my comfort,
-            my favorite person in every room 💫
+            You’re my favourite teammate,
+            my one n only safest duo,
+            the one I’d queue with in every mode of life.
+            Even on bad rounds, I’d still pick you —
+            no remake, no surrender, only us 💫
+            Jyada khush hone ki jarurat nhiii haii heh
         </p>
-
-        <div class="stats">
-            <p>💑 Vid × Khushbu</p>
-            <p>❤️ Love Level: Unlimited</p>
-            <p>😘 Kisses Pending: Infinite</p>
-            <p>🔐 Status: Permanently Yours</p>
-        </div>
 
         <div class="footer">
-            Forever yours 💕<br>— Khushbu
+            Always your duo, forever 💕<br>
+            — Khushbu
         </div>
     </div>
 </div>
@@ -207,23 +209,23 @@ p {
     <button onclick="closePopup()">Awww 🥹</button>
 </div>
 
-<!-- MUSIC -->
+<!-- 🎵 SOFT ROMANTIC MUSIC -->
 <audio id="music" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-3.mp3" type="audio/mpeg">
+    <source src="song.mp3" type="audio/mpeg">
 </audio>
 
 <script>
 const notes = [
-    "Vid, you are my safest place ❤️",
-    "I still smile because of you 🥹",
-    "You are my home 💕",
-    "One year down, forever to go 💫",
-    "You make my heart stupid 😌",
-    "I love you more than noodles 😭"
+    "I love you more than noodles 🍜❤️",
+    "From Valorant lobby to my heart 🎮💘",
+    "My perfect duo 💕",
+    "KhushVid > everything else 💫",
+    "No clutch compares to choosing you 🥹"
+    "Jyada udne ki jarurat nahi haii heh 😌",
 ];
 
 function unlock() {
-    const key = "iloveyou"; // 🔐 CHANGE PASSWORD HERE
+    const key = "khushvid"; // 🔐 CHANGE PASSWORD HERE
     const input = document.getElementById("password").value;
 
     if (input === key) {
@@ -244,7 +246,6 @@ function startHeartRain() {
         heart.style.left = Math.random() * 100 + "vw";
         heart.style.animationDuration = (3 + Math.random() * 4) + "s";
         document.body.appendChild(heart);
-
         setTimeout(() => heart.remove(), 7000);
     }, 300);
 }
