--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ button:hover {
 .content {
     max-width: 980px;
     margin: auto;
-    background: rgba(255,255,255,0.92);
+    background: rgba(255,255,255,0.93);
     padding: 50px;
     border-radius: 35px;
     text-align: center;
@@ -102,9 +102,7 @@ button:hover {
     z-index: 2;
 }
 
-h1 {
-    font-size: 3rem;
-}
+h1 { font-size: 3rem; }
 
 .names {
     font-size: 1.9rem;
@@ -124,18 +122,19 @@ p {
     margin: 22px 0;
 }
 
-/* hacker-love logs */
+/* 🧠 TECH → EMOTION LOGS */
 .logs {
     font-family: "Courier New", monospace;
-    background: #2b0f1a;
+    background: #1b0c12;
     color: #ffd1dc;
-    padding: 22px;
-    border-radius: 15px;
+    padding: 25px;
+    border-radius: 18px;
     text-align: left;
-    margin: 30px 0;
+    margin: 35px 0;
+    line-height: 1.6;
 }
 
-/* Valorant section */
+/* 🎮 Valorant section */
 .valorant {
     background: rgba(255,255,255,0.75);
     padding: 28px;
@@ -143,8 +142,18 @@ p {
     margin: 35px 0;
 }
 
+/* 🔮 FUTURE US */
+.future {
+    background: rgba(255,245,248,0.95);
+    padding: 35px;
+    border-radius: 25px;
+    margin: 45px 0;
+    font-size: 1.2rem;
+}
+
+/* 🌸 FINAL LOVE */
 .final-love {
-    background: rgba(255,235,240,0.9);
+    background: rgba(255,235,240,0.95);
     padding: 35px;
     border-radius: 25px;
     margin-top: 40px;
@@ -229,13 +238,15 @@ p {
         <div class="big-hearts" onclick="showLove()">💖 💕 💗 💞 💘</div>
         <small><strong>Click above the hearts 👆</strong></small>
 
-        <!-- Hacker → Love Logs -->
+        <!-- 🧠 TECH → EMOTION ARC -->
         <div class="logs">
-            [SCAN] Vulnerability detected: falling in love<br>
-            [WARNING] Emotional attachment increasing<br>
+            [SCAN] System vulnerability detected: emotional exposure<br>
+            [ANALYSIS] Cause traced to unexpected connection<br>
+            [WARNING] Attachment level exceeding safe limits<br>
             [PATCH] Applied: patience, effort, understanding<br>
-            [STATUS] Connection stable<br>
-            [RESULT] KhushVid locked permanently ❤️
+            [UPDATE] Logic overridden by feelings<br>
+            [STATUS] Heart module active<br>
+            [RESULT] KhushVid connection secured permanently ❤️
         </div>
 
         <p>
@@ -247,11 +258,11 @@ p {
             we grew into something real.
             You’re my favorite teammate,
             my comfort, my forever duo.
-            And just so you know —
+            And yes —
             <strong>I love you more than noodles 🍜❤️</strong>
         </p>
 
-        <!-- Valorant Section -->
+        <!-- 🎮 VALORANT -->
         <div class="valorant">
             <h3>🎮 Our First Match</h3>
             <p>Duo Queue: Unplanned</p>
@@ -261,7 +272,23 @@ p {
             <p>Chemistry: S-Tier 💯</p>
         </div>
 
-        <!-- 🌸 YOUR GENUINE LOVE PARAGRAPH (CENTERPIECE) 🌸 -->
+        <!-- 🔮 FUTURE US (CLEAR & DISTINCT) -->
+        <div class="future">
+            <p>
+                One day, when we look back at this page,
+                I hope we smile at how everything started —
+                simple, unplanned, and honest.
+                I hope future us remembers that love wasn’t about grand moments,
+                but about choosing each other on ordinary days,
+                growing through mistakes,
+                and finding home in each other again and again.
+                No matter where life takes us,
+                I hope we always recognize this feeling —
+                the one that made us stay.
+            </p>
+        </div>
+
+        <!-- 🌸 FINAL LOVE (YOUR WORDS) -->
         <div class="final-love">
             <p>
                 Loving you hasn’t been about perfection, it’s been about effort —
@@ -310,7 +337,7 @@ const notes = [
     "From Valorant lobby to my heart 🎮💘",
     "I love you more than noodles 🍜❤️",
     "You’re my favorite teammate for life 💕",
-    "No FF on us 😌",
+    "No nazar to us pilliiizzz 😌",
     "KhushVid forever 💫"
 ];
 
