--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@ button:hover {
     box-shadow: 0 25px 60px rgba(0,0,0,0.25);
     position: relative;
     z-index: 2;
+
+    <!-- 💌 SECRET LETTER BUTTON -->
+<div class="big-hearts" style="margin-top:30px;">
+    <a href="letter.html" style="text-decoration:none;">
+        📩 <span style="font-size:1.3rem;">Click me Vid 💌</span>
+    </a>
+</div>
+<small><strong>A secret letter just for you 🥹❤️</strong></small>
+
 }
 
 h1 { font-size: 3rem; }
