--- a/index.html
+++ b/index.html
@@ -100,15 +100,6 @@ button:hover {
     box-shadow: 0 25px 60px rgba(0,0,0,0.25);
     position: relative;
     z-index: 2;
-
-    <!-- 💌 SECRET LETTER BUTTON -->
-<div class="big-hearts" style="margin-top:30px;">
-    <a href="letter.html" style="text-decoration:none;">
-        📩 <span style="font-size:1.3rem;">Click me Vid 💌</span>
-    </a>
-</div>
-<small><strong>A secret letter just for you 🥹❤️</strong></small>
-
 }
 
 h1 { font-size: 3rem; }
@@ -320,7 +311,25 @@ p {
                 I’d queue with you in every version of life 💫
             </p>
         </div>
+<!-- 💌 SECRET LETTER BUTTON -->
+<div style="margin-top:40px;">
+    <a href="letter.html" style="
+        text-decoration:none;
+        font-size:1.6rem;
+        font-weight:bold;
+        display:inline-block;
+        padding:15px 25px;
+        border-radius:40px;
+        background:#fff0f5;
+        color:#5a0f2e;
+        box-shadow:0 10px 25px rgba(0,0,0,0.2);
+    ">
+        📩 Vid, click me 💌
+    </a>
+</div>
+<small><strong>A secret letter just for you 🥹❤️</strong></small>
 
+        
         <div class="signature">
             Always your duo 💕<br>
             — Khushbu
