--- a/index.html
+++ b/index.html
@@ -272,6 +272,23 @@ p {
             <p>Chemistry: S-Tier 💯</p>
         </div>
 
+        <!-- 🌍 LONG DISTANCE LOVE -->
+<div class="future">
+    <p>
+Loving you from miles away hasn’t been easy.
+Different places, different routines, different days —
+but the same feelings, the same effort, the same choice.
+We learned how to miss each other without giving up,
+how to fight without walking away,
+and how to love without being in the same room.
+Long distance taught us patience, trust, and effort.
+It taught us how to miss each other deeply,
+yet love each other even deeper.
+Even with miles between us,
+we never stopped choosing “us”.    </p>
+</div>
+
+
         <!-- 🔮 FUTURE US (CLEAR & DISTINCT) -->
         <div class="future">
             <p>
